@@ -24,7 +24,7 @@
 .\" Postal address: 15 Crescent Road, Wokingham, Berks, RG40 2DB, England
 .\"
 .\"
-.TH fuse 1 "19th April, 2003" "Version 0.6.0" "Emulators"
+.TH fuse 1 "31st May, 2003" "Version 0.6.0.1" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
